added header/footer design with css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .header {
+  background-color: burlywood;
+  height: 50px;
+  font-size: 2em;
+  color: white;
+  padding: 20px
+}
+
+.footer {
+  background: var(--primary-color);
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+} */
