page loads but can't get inline js to fire

--- a/client/src/components/Chord/index.html
+++ b/client/src/components/Chord/index.html
@@ -103,7 +103,7 @@
 	</div>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/chordScribbles.js"></script>
+    <!-- <script src="js/chordScribbles.js"></script> -->
 	
   </body>
 </html>
